--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,10 @@
         "phpunit/phpunit": "^9.5",
         "symfony/http-foundation": "^5.2",
         "symfony/routing": "^5.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
