--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "phpunit/phpunit": "^9.5",
         "symfony/http-foundation": "^5.2",
         "symfony/routing": "^5.2",
-        "symfony/http-kernel": "^5.2"
+        "symfony/http-kernel": "^5.2",
+        "symfony/event-dispatcher": "^5.2"
     },
     "autoload": {
         "psr-4": {
