--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/http-foundation": "^5.2",
         "symfony/routing": "^5.2",
         "symfony/http-kernel": "^5.2",
-        "symfony/event-dispatcher": "^5.2"
+        "symfony/event-dispatcher": "^5.2",
+        "symfony/dependency-injection": "^5.2"
     },
     "autoload": {
         "psr-4": {
